--- a/public/index.html
+++ b/public/index.html
@@ -14,14 +14,12 @@
         Price:
         <input type="number" id="price" name="price" required>
         Quantity:
-        <input type="number" id="quantity" name="quantity" required>
+        <input type="number" id="quantity" name="quantity" required> <!-- Corrected attribute name -->
 
         <button type="submit">Add Item</button>
     </form>
 
-    <div id="itemList">
-
-    </div>
+    <div id="itemList"></div>
     <div id="cartList"></div>
     <script src="frontend.js"></script>
 </body>
