--- a/public/index.html
+++ b/public/index.html
@@ -13,14 +13,18 @@
         <input type="text" id="description" name="description" required>
         Price:
         <input type="number" id="price" name="price" required>
-        Quantity:
-        <input type="number" id="quantity" name="quantity" required> <!-- Corrected attribute name -->
+        <!-- Quantity:
+        <input type="number" id="quantity" name="quantity" required>  -->
 
         <button type="submit">Add Item</button>
     </form>
 
-    <div id="itemList"></div>
-    <div id="cartList"></div>
+    <div id="itemList">
+
+    </div>
+    <div id="cartList">
+        
+    </div>
     <script src="frontend.js"></script>
 </body>
 </html>
