--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Candy Shop</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <form id="candyShopForm">
@@ -13,18 +14,14 @@
         <input type="text" id="description" name="description" required>
         Price:
         <input type="number" id="price" name="price" required>
-        <!-- Quantity:
-        <input type="number" id="quantity" name="quantity" required>  -->
 
         <button type="submit">Add Item</button>
     </form>
-
-    <div id="itemList">
-
-    </div>
-    <div id="cartList">
-        
-    </div>
+    <h1>Item List</h1>
+    <div id="itemList"></div>
+    <hr>
+    <h1>Cart List</h1> 
+    <div id="cartList"></div>
     <script src="frontend.js"></script>
 </body>
 </html>
