--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,8 @@
         <input type="text" id="description" name="description" required>
         Price:
         <input type="number" id="price" name="price" required>
-
+        Quantity
+        <input type="number" id="quantity" name="quantity" required>
         <button type="submit">Add Item</button>
     </form>
     <h1>Item List</h1>
